--- a/index.html
+++ b/index.html
@@ -154,6 +154,81 @@
             </div>
         </a>
 
+        <a href="metaspace_gc_demo.html" class="card">
+            <div class="card-header">Metaspace & PermGen</div>
+            <div class="card-body">
+                Visualize the Metaspace memory area, class loading, and OOM scenarios.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="hashmap_simulation.html" class="card">
+            <div class="card-header">HashMap Internals</div>
+            <div class="card-body">
+                Visualize Put operations, Hash Collisions (Chaining), Treeification, and Resizing.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="threadlocal_leak_demo.html" class="card">
+            <div class="card-header">ThreadLocal Memory Leak</div>
+            <div class="card-body">
+                Step-by-step visualization of why ThreadLocalMap uses WeakReferences and how leaks occur.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <!-- Section: Garbage Collection -->
+        <div class="card-section">
+            <h2>♻️ Garbage Collection (垃圾回收)</h2>
+        </div>
+
+        <a href="java_gc_simulation.html" class="card">
+            <div class="card-header">Generational GC</div>
+            <div class="card-body">
+                General Garbage Collection concepts, Eden/Survivor spaces, and promotion.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="tri_color_marking.html" class="card">
+            <div class="card-header">Tri-Color Marking</div>
+            <div class="card-body">
+                Visualize the marking algorithm used by CMS and G1 collectors (White, Gray, Black sets).
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="zgc_simulation.html" class="card">
+            <div class="card-header">ZGC Simulation</div>
+            <div class="card-body">
+                Visualize the Z Garbage Collector's colored pointers and concurrent processing.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="java_references_simulation.html" class="card">
+            <div class="card-header">Java References</div>
+            <div class="card-body">
+                Interactive demo of Strong, Soft, Weak, and Phantom references and their GC behavior.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Spring Framework -->
         <div class="card-section">
             <h2>🍃 Spring Framework</h2>
@@ -276,6 +351,16 @@
             </div>
         </a>
 
+        <a href="mysql_locks_demo.html" class="card">
+            <div class="card-header">MySQL Locks & Isolation</div>
+            <div class="card-body">
+                Visualize InnoDB Locks (Record, Gap, Next-Key) and Isolation Levels (RC vs RR).
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <a href="redis_data_structures_demo.html" class="card">
             <div class="card-header">Redis Data Structures</div>
             <div class="card-body">
@@ -365,81 +450,6 @@
             <div class="card-header">CAP Theorem Demo</div>
             <div class="card-body">
                 Interactive simulation of Network Partitions and the trade-off between Consistency and Availability.
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <a href="metaspace_gc_demo.html" class="card">
-            <div class="card-header">Metaspace & PermGen</div>
-            <div class="card-body">
-                Visualize the Metaspace memory area, class loading, and OOM scenarios.
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <a href="hashmap_simulation.html" class="card">
-            <div class="card-header">HashMap Internals</div>
-            <div class="card-body">
-                Visualize Put operations, Hash Collisions (Chaining), Treeification, and Resizing.
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <a href="threadlocal_leak_demo.html" class="card">
-            <div class="card-header">ThreadLocal Memory Leak</div>
-            <div class="card-body">
-                Step-by-step visualization of why ThreadLocalMap uses WeakReferences and how leaks occur.
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <!-- Section: Garbage Collection -->
-        <div class="card-section">
-            <h2>♻️ Garbage Collection (垃圾回收)</h2>
-        </div>
-
-        <a href="java_gc_simulation.html" class="card">
-            <div class="card-header">Generational GC</div>
-            <div class="card-body">
-                General Garbage Collection concepts, Eden/Survivor spaces, and promotion.
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <a href="tri_color_marking.html" class="card">
-            <div class="card-header">Tri-Color Marking</div>
-            <div class="card-body">
-                Visualize the marking algorithm used by CMS and G1 collectors (White, Gray, Black sets).
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <a href="zgc_simulation.html" class="card">
-            <div class="card-header">ZGC Simulation</div>
-            <div class="card-body">
-                Visualize the Z Garbage Collector's colored pointers and concurrent processing.
-            </div>
-            <div class="card-footer">
-                <span>View Demo</span> <span class="tag">HTML</span>
-            </div>
-        </a>
-
-        <a href="java_references_simulation.html" class="card">
-            <div class="card-header">Java References</div>
-            <div class="card-body">
-                Interactive demo of Strong, Soft, Weak, and Phantom references and their GC behavior.
             </div>
             <div class="card-footer">
                 <span>View Demo</span> <span class="tag">HTML</span>
