spring boot interview questions update

--- a/index.html
+++ b/index.html
@@ -456,6 +456,16 @@
             </div>
         </a>
 
+        <a href="distributed_transaction_demo.html" class="card">
+            <div class="card-header">Distributed Transactions</div>
+            <div class="card-body">
+                Visualize 2PC (Two-Phase Commit), TCC (Try-Confirm-Cancel), and SAGA patterns.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
         <!-- Section: Java Memory Model -->
         <div class="card-section">
             <h2>🧠 Java Memory Model (内存模型)</h2>
@@ -533,6 +543,41 @@
             </div>
             <div class="card-footer">
                 <span>View Code</span> <span class="tag java">JAVA</span>
+            </div>
+        </a>
+
+        <!-- Section: Frontend Engineering -->
+        <div class="card-section">
+            <h2>🎨 Frontend Engineering (前端工程)</h2>
+        </div>
+
+        <a href="browser_rendering_process_demo.html" class="card">
+            <div class="card-header">Browser Rendering Process</div>
+            <div class="card-body">
+                Visualize the Critical Rendering Path: HTML -> DOM -> CSSOM -> Render Tree -> Layout -> Paint.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="angular_core_concepts_demo.html" class="card">
+            <div class="card-header">Angular Core Concepts</div>
+            <div class="card-body">
+                Interactive playground for Angular Architecture, Lifecycle Hooks, Change Detection (Zone.js), and RxJS.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="frontend_engineering_webpack_demo.html" class="card">
+            <div class="card-header">Frontend Engineering & Webpack</div>
+            <div class="card-body">
+                Interactive guide to Webpack concepts (Loaders, Plugins), Configuration, and Optimization (Tree Shaking, Splitting).
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
             </div>
         </a>
 
