spring boot interview questions update

--- a/index.html
+++ b/index.html
@@ -581,6 +581,40 @@
             </div>
         </a>
 
+        <div class="card-section">
+            <h2>🚀 DevOps & SRE (运维与可靠性)</h2>
+        </div>
+
+        <a href="cicd_jenkins_demo.html" class="card">
+            <div class="card-header">DevOps & Jenkins CI/CD</div>
+            <div class="card-body">
+                Interactive guide to Jenkins Pipelines, Configuration (Declarative vs Scripted), and Interview Concepts.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="docker_openshift_demo.html" class="card">
+            <div class="card-header">DevOps - Docker & OpenShift</div>
+            <div class="card-body">
+                Architecture visualization, Dockerfile guide, OpenShift Configs (Routes, Services), and Interview Q&A.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
+        <a href="sre_capacity_troubleshooting_demo.html" class="card">
+            <div class="card-header">SRE - Capacity & Troubleshooting</div>
+            <div class="card-body">
+                Capacity Planning (QPS, Pods, Pools), Production Readiness Checklist, and SRE Troubleshooting Toolkit.
+            </div>
+            <div class="card-footer">
+                <span>View Demo</span> <span class="tag">HTML</span>
+            </div>
+        </a>
+
     </div>
 
 </body>
